# ant-consensus

./: .gitignore  Cargo.toml  README.md
examples/: simple_sim.rs
src/: lib.rs  main.rs
src/consensus/: ant_colony.rs  engine.rs  mod.rs
src/core/: ant_agent.rs  mod.rs  node_state.rs  pheromone.rs  types.rs
src/crypto/: hashing.rs  mod.rs  signing.rs
src/network/: discovery.rs  message.rs  mod.rs  multicast.rs
src/utils/: mod.rs  random.rs  timing.rs
tests/: integration_tests.rs
